# dbg-container

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: __main__.py
static/: index.html
