[tool.poetry]
name = "dbg-container"
version = "0.1.0"
description = ""
authors = ["Alex Povel <git@alexpovel.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
